--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=, initial-scale=1.0">
-  <title>Document</title>
+  <title>odin Recipes</title>
 </head>
 
 <body>
   <H1>Odin Recipes</H1>
+  <a href="./odin-Recipes/Recipes/Green-Chile-Enchiladas.html">Green-Chile-Enchiladas</a>
 </body>
 
 </html>
