website steps and pictures

--- a/odin-Recipes/Recipes/Green-Chile-Enchiladas.html
+++ b/odin-Recipes/Recipes/Green-Chile-Enchiladas.html
@@ -10,6 +10,29 @@
 
 <body>
   <H1>Green chile enchiladas</H1>
+  <img src="./enchilada.webp" alt="Green-Chile-Enchiladas" sizes="100px">
+  <p>green chile enchiladas are made up of cheese green chile mushroom cream and chicken breast.</p>
+  <p>The Green-Chile-Enchiladas enchildas This is such an easy enchilada dish to make and a great use for leftover
+    turkey. It's also very easy to adapt to different tastes just by changing an ingredient or two.</p>
+  <p>when making enchiladas the recipes should be easy to make simple steps </p>
+  <h2>Ingridients</h2>
+  <ul>
+    <li>3 cups shredded cooked chicken breast</li>
+    <li>1 half cups sour cream, divided</li>
+    <li>1 jar chunky, mild green chile salsa, divided</li>
+    <li>1 package shredded mild Cheddar cheese,divided</li>
+    <li>1 packeges shredded Monterey Jack cheese, divided</li>
+    <li>8 inch flour tortilla</li>
+  </ul>
+  <H3>steps</H3>
+  <ol>
+    <li>Boil chicken breast </li>
+    <li>Shred chicken</li>
+    <li>Preheat oven to 300 degree</li>
+    <li>spray the cooking pan with oil</li>
+    <li>put together the dish by placig tortilla fallow by chicken than cream</li>
+    <li>place dish in the already heated oven</li>
+  </ol>
 </body>
 
 </html>
